// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`color prop when type is range 1`] = `
<div class="van-calendar">
  <div class="van-calendar__header">
    <div class="van-calendar__header-title">
      Calendar
    </div>
    <div class="van-calendar__header-subtitle">
    </div>
    <div class="van-calendar__weekdays">
      <span class="van-calendar__weekday">
        Sun
      </span>
      <span class="van-calendar__weekday">
        Mon
      </span>
      <span class="van-calendar__weekday">
        Tue
      </span>
      <span class="van-calendar__weekday">
        Wed
      </span>
      <span class="van-calendar__weekday">
        Thu
      </span>
      <span class="van-calendar__weekday">
        Fri
      </span>
      <span class="van-calendar__weekday">
        Sat
      </span>
    </div>
  </div>
  <div class="van-calendar__body">
    <div class="van-calendar__month">
      <div role="grid"
           class="van-calendar__days"
      >
        <div class="van-calendar__day"
             style="width: 100%;"
        >
        </div>
        <div class="van-calendar__day"
             style="width: 100%;"
        >
        </div>
        <div class="van-calendar__day"
             style="width: 100%;"
        >
        </div>
        <div class="van-calendar__day"
             style="width: 100%;"
        >
        </div>
        <div class="van-calendar__day"
             style="width: 100%;"
        >
        </div>
        <div class="van-calendar__day"
             style="width: 100%;"
        >
        </div>
      </div>
    </div>
  </div>
  <div class="van-calendar__footer van-safe-area-bottom">
    <button type="button"
            class="van-button van-button--primary van-button--normal van-button--block van-button--round van-calendar__confirm"
            style="color: white; background: blue; border-color: blue;"
    >
      <div class="van-button__content">
        <span class="van-button__text">
          Confirm
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`color prop when type is single 1`] = `
<div class="van-calendar">
  <div class="van-calendar__header">
    <div class="van-calendar__header-title">
      Calendar
    </div>
    <div class="van-calendar__header-subtitle">
    </div>
    <div class="van-calendar__weekdays">
      <span class="van-calendar__weekday">
        Sun
      </span>
      <span class="van-calendar__weekday">
        Mon
      </span>
      <span class="van-calendar__weekday">
        Tue
      </span>
      <span class="van-calendar__weekday">
        Wed
      </span>
      <span class="van-calendar__weekday">
        Thu
      </span>
      <span class="van-calendar__weekday">
        Fri
      </span>
      <span class="van-calendar__weekday">
        Sat
      </span>
    </div>
  </div>
  <div class="van-calendar__body">
    <div class="van-calendar__month">
      <div role="grid"
           class="van-calendar__days"
      >
        <div class="van-calendar__month-mark">
          1
        </div>
        <div role="gridcell"
             style="margin-left: 71.42857142857143%;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          1
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          2
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          3
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          4
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          5
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          6
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          7
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          8
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          9
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--selected"
             tabindex="-1"
        >
          <div class="van-calendar__selected-day"
               style="background: blue;"
          >
            10
          </div>
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          11
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          12
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          13
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          14
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          15
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          16
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          17
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          18
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          19
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          20
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          21
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          22
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          23
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          24
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          25
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          26
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          27
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          28
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          29
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          30
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          31
        </div>
      </div>
    </div>
  </div>
  <div class="van-calendar__footer van-safe-area-bottom">
    <button type="button"
            class="van-button van-button--primary van-button--normal van-button--block van-button--round van-calendar__confirm"
            style="color: white; background: blue; border-color: blue;"
    >
      <div class="van-button__content">
        <span class="van-button__text">
          Confirm
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`formatter prop 1`] = `
<div class="van-calendar">
  <div class="van-calendar__header">
    <div class="van-calendar__header-title">
      Calendar
    </div>
    <div class="van-calendar__header-subtitle">
    </div>
    <div class="van-calendar__weekdays">
      <span class="van-calendar__weekday">
        Sun
      </span>
      <span class="van-calendar__weekday">
        Mon
      </span>
      <span class="van-calendar__weekday">
        Tue
      </span>
      <span class="van-calendar__weekday">
        Wed
      </span>
      <span class="van-calendar__weekday">
        Thu
      </span>
      <span class="van-calendar__weekday">
        Fri
      </span>
      <span class="van-calendar__weekday">
        Sat
      </span>
    </div>
  </div>
  <div class="van-calendar__body">
    <div class="van-calendar__month">
      <div role="grid"
           class="van-calendar__days"
      >
        <div class="van-calendar__month-mark">
          1
        </div>
        <div role="gridcell"
             style="margin-left: 71.42857142857143%;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          1
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          2
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          3
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          4
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          5
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          6
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          7
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          8
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          9
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--selected"
             tabindex="-1"
        >
          <div class="van-calendar__selected-day">
            10
          </div>
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          <div class="van-calendar__top-info">
            Top Info
          </div>
          11
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          12
          <div class="van-calendar__bottom-info">
            Bottom Info
          </div>
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          Text
        </div>
        <div role="gridcell"
             class="van-calendar__day test"
             tabindex="-1"
        >
          14
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          15
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          16
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          17
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          18
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          19
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          20
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          21
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          22
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          23
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          24
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          25
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          26
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          27
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          28
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          29
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          30
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          31
        </div>
      </div>
    </div>
  </div>
  <div class="van-calendar__footer van-safe-area-bottom">
    <button type="button"
            class="van-button van-button--primary van-button--normal van-button--block van-button--round van-calendar__confirm"
    >
      <div class="van-button__content">
        <span class="van-button__text">
          Confirm
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`popup wrapper 1`] = `
<transition-stub name="van-fade"
                 appear="true"
                 persisted="false"
                 css="true"
                 role="button"
                 tabindex="0"
>
</transition-stub>
<transition-stub name="van-popup-slide-bottom"
                 appear="false"
                 persisted="false"
                 css="true"
>
</transition-stub>
`;

exports[`popup wrapper 2`] = `
<transition-stub name="van-fade"
                 appear="true"
                 persisted="false"
                 css="true"
                 role="button"
                 tabindex="0"
>
  <div style="z-index: 2001;"
       class="van-overlay"
  >
  </div>
</transition-stub>
<transition-stub name="van-popup-slide-bottom"
                 appear="false"
                 persisted="false"
                 css="true"
>
  <div style="z-index: 2001;"
       role="dialog"
       tabindex="0"
       class="van-popup van-popup--round van-popup--bottom van-calendar__popup"
  >
    <div class="van-calendar">
      <div class="van-calendar__header">
        <div class="van-calendar__header-title">
          Calendar
        </div>
        <div class="van-calendar__header-subtitle">
        </div>
        <div class="van-calendar__weekdays">
          <span class="van-calendar__weekday">
            Sun
          </span>
          <span class="van-calendar__weekday">
            Mon
          </span>
          <span class="van-calendar__weekday">
            Tue
          </span>
          <span class="van-calendar__weekday">
            Wed
          </span>
          <span class="van-calendar__weekday">
            Thu
          </span>
          <span class="van-calendar__weekday">
            Fri
          </span>
          <span class="van-calendar__weekday">
            Sat
          </span>
        </div>
      </div>
      <div class="van-calendar__body">
        <div class="van-calendar__month">
          <div role="grid"
               class="van-calendar__days"
          >
            <div class="van-calendar__day"
                 style="width: 100%;"
            >
            </div>
            <div class="van-calendar__day"
                 style="width: 100%;"
            >
            </div>
            <div class="van-calendar__day"
                 style="width: 100%;"
            >
            </div>
            <div class="van-calendar__day"
                 style="width: 100%;"
            >
            </div>
            <div class="van-calendar__day"
                 style="width: 100%;"
            >
            </div>
            <div class="van-calendar__day"
                 style="width: 100%;"
            >
            </div>
          </div>
        </div>
      </div>
      <div class="van-calendar__footer van-safe-area-bottom">
        <button type="button"
                class="van-button van-button--primary van-button--normal van-button--block van-button--round van-calendar__confirm"
        >
          <div class="van-button__content">
            <span class="van-button__text">
              Confirm
            </span>
          </div>
        </button>
      </div>
    </div>
    <i class="van-badge__wrapper van-icon van-icon-cross van-popup__close-icon van-popup__close-icon--top-right van-haptics-feedback"
       role="button"
       tabindex="0"
    >
    </i>
  </div>
</transition-stub>
`;

exports[`row-height prop 1`] = `
<div class="van-calendar">
  <div class="van-calendar__header">
    <div class="van-calendar__header-title">
      Calendar
    </div>
    <div class="van-calendar__header-subtitle">
    </div>
    <div class="van-calendar__weekdays">
      <span class="van-calendar__weekday">
        Sun
      </span>
      <span class="van-calendar__weekday">
        Mon
      </span>
      <span class="van-calendar__weekday">
        Tue
      </span>
      <span class="van-calendar__weekday">
        Wed
      </span>
      <span class="van-calendar__weekday">
        Thu
      </span>
      <span class="van-calendar__weekday">
        Fri
      </span>
      <span class="van-calendar__weekday">
        Sat
      </span>
    </div>
  </div>
  <div class="van-calendar__body">
    <div class="van-calendar__month">
      <div role="grid"
           class="van-calendar__days"
      >
        <div class="van-calendar__month-mark">
          1
        </div>
        <div role="gridcell"
             style="height: 50px; margin-left: 71.42857142857143%;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          1
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          2
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          3
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          4
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          5
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          6
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          7
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          8
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          9
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="van-calendar__day van-calendar__day--selected"
             tabindex="-1"
        >
          <div class="van-calendar__selected-day"
               style="width: 50px; height: 50px;"
          >
            10
          </div>
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="van-calendar__day"
             tabindex="-1"
        >
          11
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="van-calendar__day"
             tabindex="-1"
        >
          12
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="van-calendar__day"
             tabindex="-1"
        >
          13
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="van-calendar__day"
             tabindex="-1"
        >
          14
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="van-calendar__day"
             tabindex="-1"
        >
          15
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="van-calendar__day"
             tabindex="-1"
        >
          16
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="van-calendar__day"
             tabindex="-1"
        >
          17
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="van-calendar__day"
             tabindex="-1"
        >
          18
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="van-calendar__day"
             tabindex="-1"
        >
          19
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="van-calendar__day"
             tabindex="-1"
        >
          20
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          21
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          22
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          23
        </div>
        <div role="gridcell"
             style="height: 50px; margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          24
        </div>
        <div role="gridcell"
             style="height: 50px; margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          25
        </div>
        <div role="gridcell"
             style="height: 50px; margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          26
        </div>
        <div role="gridcell"
             style="height: 50px; margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          27
        </div>
        <div role="gridcell"
             style="height: 50px; margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          28
        </div>
        <div role="gridcell"
             style="height: 50px; margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          29
        </div>
        <div role="gridcell"
             style="height: 50px; margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          30
        </div>
        <div role="gridcell"
             style="height: 50px; margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          31
        </div>
      </div>
    </div>
  </div>
  <div class="van-calendar__footer van-safe-area-bottom">
    <button type="button"
            class="van-button van-button--primary van-button--normal van-button--block van-button--round van-calendar__confirm"
    >
      <div class="van-button__content">
        <span class="van-button__text">
          Confirm
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`should render confirm-text slot correctly 1`] = `
<button type="button"
        class="van-button van-button--primary van-button--normal van-button--block van-button--round van-calendar__confirm"
>
  <div class="van-button__content">
    <span class="van-button__text">
      Custom confirm text false
    </span>
  </div>
</button>
`;

exports[`should render month-title slot correctly 1`] = `
<div class="van-calendar__month-title">
  Custom Month Title
</div>
`;

exports[`should render subtitle slot with params 1`] = `
<div class="van-calendar__header-subtitle">
  Custom Subtitle
</div>
`;

exports[`should render title、footer、subtitle slot correctly 1`] = `
<div class="van-calendar">
  <div class="van-calendar__header">
    <div class="van-calendar__header-title">
      Custom Title
    </div>
    <div class="van-calendar__header-subtitle">
      Custom Subtitle
    </div>
    <div class="van-calendar__weekdays">
      <span class="van-calendar__weekday">
        Sun
      </span>
      <span class="van-calendar__weekday">
        Mon
      </span>
      <span class="van-calendar__weekday">
        Tue
      </span>
      <span class="van-calendar__weekday">
        Wed
      </span>
      <span class="van-calendar__weekday">
        Thu
      </span>
      <span class="van-calendar__weekday">
        Fri
      </span>
      <span class="van-calendar__weekday">
        Sat
      </span>
    </div>
  </div>
  <div class="van-calendar__body">
    <div class="van-calendar__month">
      <div role="grid"
           class="van-calendar__days"
      >
        <div class="van-calendar__month-mark">
          1
        </div>
        <div role="gridcell"
             style="margin-left: 71.42857142857143%;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          1
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          2
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          3
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          4
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          5
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          6
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          7
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          8
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          9
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--selected"
             tabindex="-1"
        >
          <div class="van-calendar__selected-day">
            10
          </div>
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          11
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          12
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          13
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          14
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          15
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          16
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          17
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          18
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          19
        </div>
        <div role="gridcell"
             class="van-calendar__day"
             tabindex="-1"
        >
          20
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          21
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          22
        </div>
        <div role="gridcell"
             class="van-calendar__day van-calendar__day--disabled"
        >
          23
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          24
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          25
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          26
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          27
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          28
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          29
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          30
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="van-calendar__day van-calendar__day--disabled"
        >
          31
        </div>
      </div>
    </div>
  </div>
  <div class="van-calendar__footer van-safe-area-bottom">
    Custom Footer
  </div>
</div>
`;

exports[`should render top-info and bottom-info slot correctly 1`] = `
<div role="gridcell"
     style="margin-left: 71.42857142857143%;"
     class="van-calendar__day van-calendar__day--disabled"
>
  <div class="van-calendar__top-info">
    top: 1
  </div>
  1
  <div class="van-calendar__bottom-info">
    bottom: 1
  </div>
</div>
`;
